# blackhorse

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VERIFY.md  drizzle.config.ts  index.html  next.config.mjs  package-lock.json  package.json  pyproject.toml  quickstart.py  requirements.txt  schema.sql  seed_thoughts.py  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
blackhorse/: __init__.py
blackhorse/agents/: __init__.py  attestation.py  interrupt.py  scope.py
blackhorse/compression/: __init__.py  engine.py
blackhorse/core/: __init__.py  bitstream.py  ringbuffer.py  utils.py
blackhorse/crypto/: __init__.py
blackhorse/interface/: __init__.py  handshake.py
blackhorse/language/: __init__.py  decoder.py  encoder.py  packet.py  symbols.py
blackhorse/mesh/: __init__.py  cli.py  collector.py  detector.py  flusher.py  governance.py  ledger.py  parameters.py  queue.py  registry.py  spatial.py
docs/: BHL_SPEC.md  PUBLIC_SPEC.md  STAGE_1.md  THOUGHT_SPEC.md
lib/: constants.ts
src/: App.jsx  BlackhorsePipeline.jsx  index.css  main.jsx
tests/: __init__.py  test_compression.py  test_core.py  test_crypto_asymmetric.py  test_crypto_signing.py  test_crypto_symmetric.py  test_interface.py  test_language.py  test_thoughts.py
thoughts/: 0001_why-proof-of-thought.thought  0002_why-bhl-not-utf8.thought  0003_why-classical-not-pq-v010.thought  0004_why-sha3-quantum-transition.thought  THOUGHTS.manifest  THOUGHTS.sha256
types/: index.ts
(+69 files in other folders)
